Fixed layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@ a {
 .app-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  /* height: 100%; */
   min-height: 100vh;
 }
 
@@ -140,7 +140,7 @@ a {
 footer {
   display: flex;
   align-items: center;
-  margin-top: auto;
+  /* margin-top: auto; */
   box-shadow: 0 0 5px #e5e5e5;
 }
 
@@ -163,7 +163,6 @@ footer p {
 .home-container {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
   gap: 2em;
   margin: auto;
@@ -177,6 +176,10 @@ footer p {
 .unit-converters-container {
   margin: 0 auto auto;
   max-width: 1000px;
+}
+
+.age-container {
+  margin: auto;
 }
 
 
